--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+@import 'fonts';
+@import 'media.scss';
+@import '1.scss';
+@import '2.scss';
+@import '3.scss';
+@import '4.scss';
+@import 'footer.scss';
+
 body {
   min-width: 320px;
 }
