--- a/src/index.pug
+++ b/src/index.pug
@@ -3,5 +3,12 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(rel="shortcut icon" href="images/logo.png" type="image/x-icon")
     title Document
   body
+    include includes/1.pug
+    include includes/2.pug
+    include includes/3.pug
+    include includes/4.pug
+    include includes/footer.pug
